# flet-android-apps

./: .gitignore  README.md
mw-dictionary/: README.md  pyproject.toml
mw-dictionary/src/: config.py  main.py
